--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,29 @@
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600");
 @import url("font-awesome.min.css");
 
+.toTop{
+	background-color: transparent;
+	border: 1px solid #000;
+	color: #000;
+	padding: 1em 2.5em 1em 2.5em;
+	bottom:25px;
+	right:95px;
+	position:fixed;
+	z-index:99;
+	opacity: 0;
+    transition: opacity 0.35s linear;
+}
+
+.toTop:hover{
+	background-color: transparent;
+}
+
+@media screen and (max-width: 1013px) {
+	.toTop{
+		display: none;
+	}
+}
+
 .firstBox{
 	margin-top:-45px;
 }
@@ -61,6 +84,7 @@
 		font-size: 100%;
 		font: inherit;
 		vertical-align: baseline;
+		scroll-behavior: smooth;
 	}
 
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
